--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
                                 </li>
                             
                                 <li class="main-nav-list-item" >
-                                    <a class="main-nav-list-link" href="/">index.-github</a>
+                                    <a class="main-nav-list-link" href="/">Contact</a>
                                 </li>
                             
                         </ul>
